[project]
name = "mock-external-server"
version = "0.1.0"
description = "Mock MCP Server for testing mcp-gateway relay and directory"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
